Sat Feb 24 04:02:18 1996  Mark W. Eichin  <eichin@cygnus.com>

	* dump.c (process_k5beta_record): encrypted keys used to have 4
	byte lengths in MSB order, need to convert to 2 byte LSB order
	lengths before storing. Handle primary key and alternate key.

Fri Feb 23 18:44:10 1996  Mark Eichin  <eichin@cygnus.com>

	* kdb5_edit.c (kdb5_edit_Init): set manual_mkey for testing with -P

Wed Feb 14 09:52:18 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* kdb5_edit.c (enter_master_key, set_dbname_help): If master key
		enctype is unknown, set to DEFAULT_KDC_ENCTYPE.

Tue Feb 13 16:08:07 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* kdb5_edit.c (extract_v4_srvtab): krb5_dbekd_decrypt_key_data
		takes krb5_key_data *, not **.

Tue Jan 30 18:28:57 1996  Mark Eichin  <eichin@cygnus.com>

	* dump.c (load_db): dbrenerr_fmt prints "from" first, so pass it
	to fprintf correctly.

Sun Jan 28 14:31:47 1996  Mark Eichin  <eichin@cygnus.com>

	* dump.c (process_k5_record): t2..t9 is only 8 vars, not 9.

Thu Jan 25 16:07:42 1996  Sam Hartman  <hartmans@tertius.mit.edu>

	* kdb5_edit.c (extract_srvtab): Extract *all* the keys in a
        dbentry, not the first one.
	(extract_v4_srvtab): Attempt to find the right v4 keys.

Wed Jan 24 18:48:38 1996  Tom Yu  <tlyu@dragons-lair.MIT.EDU>

	* Makefile.in: Remove spurious @DEFS@


Wed Dec 13 03:44:58 1995  Chris Provenzano (proven@mit.edu)

        * dump.c, dumpv4.c, kdb5_edit.c, loadv4.c : 
		Remove mkvno from krb5_db_entry.

Sun Dec 10 11:07:51 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* kdb5_edit.M: Document that modent exists

	* kdb5_edit.c (modent): Add usage as suggested by jhawk@mit.edu.

Thu Nov 09 17:05:57 1995  Chris Provenzano (proven@mit.edu)

        * kdb5_edit.c : Remove krb5_enctype from krb5_string_to_key() args.

Fri Oct 27 13:37:04 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* dump.c (process_k5_record): Fix off by one in malloc.
