@@ -1,3 +1,10 @@
+Mon Feb 26 22:13:45 1996  Mark Eichin  <eichin@cygnus.com>
+
+	* dump.c (process_k5beta_record): since V4 salt type has no data
+ 	either, only set key_data_ver to 1 for data_type 0 with 0-length
+ 	salt. Also, don't include alternate key if akey has all-zero type
+	and length in both fields.
+
 Sat Feb 24 04:02:18 1996  Mark W. Eichin  <eichin@cygnus.com>
 
 	* dump.c (process_k5beta_record): encrypted keys used to have 4
